# tree-sitter-autolang

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
bindings/c/: tree-sitter-autolang.pc.in
bindings/c/tree_sitter/: tree-sitter-autolang.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAutolangTests/: TreeSitterAutolangTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
