[package]
name = "tree-sitter-autolang"
description = "AutoLang Parser"
version = "0.1.2"
authors = ["AutoLang-Dev <contact@autolang.dev>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "autolang"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/autolang-dev/tree-sitter-autolang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
